fetch: implement all

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2018"
 
 [dependencies]
 sysinfo = "0.16"
-systemd = "0.8"
-libsystemd-sys = "0.8"
 iced = "0.2"
 anyhow = "1"
 blocking = "1"
+pretty-bytes = "0.2.2"
+dbus = "0.9.3"
